[tool.poetry]
name = "shoutingmatch"
version = "0.1.0"
description = ""
authors = ["Philipp Tschaikner <philipp.tschaikner@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
plotly = "^5.20.0"
nbformat = "^5.10.4"
chart-studio = "^1.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
